Fix code smells